# deeplens

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
docs/: PRD.md  sample-report.md
src/deeplens/: __init__.py  __main__.py  config.py  graph.py  main.py  models.py  state.py
src/deeplens/agents/: __init__.py  analysis.py  report.py  research.py  supervisor.py
src/deeplens/tools/: __init__.py  chart.py  sentiment.py  statistics.py  web_search.py  youtube.py
tests/: conftest.py  test_config.py  test_models.py
tests/test_agents/: test_analysis.py  test_graph.py  test_research.py  test_supervisor.py
tests/test_tools/: test_chart.py  test_sentiment.py  test_statistics.py  test_web_search.py  test_youtube.py
